--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,5 +12,41 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build with maven
-        run: mvn --batch-mode --update-snapshots package
+      - run: mvn --batch-mode --update-snapshots verify
+      - run: mkdir staging && cp target/*.jar staging
+      - uses: actions/upload-artifact@v3
+        with:
+         name: Package
+         path: staging
+
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@master
+        with:
+          name: Package
+          path: staging
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Dashboard to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: andrecastrosousa/docker-test:latest
