--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,9 @@ jobs:
           name: Package
           path: staging
 
+      - name: Build with Maven
+        run: mvn clean package
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
